--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div id="winnerWrapper">
       <p id="winner">Vamos iniciar o sorteio?</p>
+      <p id="registration"></p>
     </div>
 
     <div>
