:recicle: featuring improve functions for randomizer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="winnerWrapper">
       <p id="winner">Vamos iniciar o sorteio?</p>
       <p id="registration"></p>
+      <img src="" id="confetti" alt="celebration" />
     </div>
 
     <div>
